@@ -137,6 +137,11 @@ WIDGET_DEFAULT = {
         "font_color": "#AAAAAA",
         "highlight_color": "#00AAFF",
         "bkg_color": "#222222",
+        "show_caption": False,
+        "font_scale_caption": 0.8,
+        "caption_text": "brake pres",
+        "font_color_caption": "#CCCCCC",
+        "bkg_color_caption": "#777777",
     },
     "brake_temperature": {
         "enable": True,
@@ -1447,6 +1452,11 @@ WIDGET_DEFAULT = {
         "ride_height_offset_rear_left": 0,
         "ride_height_offset_rear_right": 0,
         "warning_color_bottoming": "#FF2200",
+        "show_caption": False,
+        "font_scale_caption": 0.8,
+        "caption_text": "ride height",
+        "font_color_caption": "#CCCCCC",
+        "bkg_color_caption": "#777777",
     },
     "rivals": {
         "enable": True,
@@ -1832,6 +1842,11 @@ WIDGET_DEFAULT = {
         "negative_position_color": "#FF2200",
         "bkg_color": "#222222",
         "position_max_range": 100,
+        "show_caption": False,
+        "font_scale_caption": 0.8,
+        "caption_text": "susp pos",
+        "font_color_caption": "#CCCCCC",
+        "bkg_color_caption": "#777777",
     },
     "system_performance": {
         "enable": True,
@@ -2136,6 +2151,11 @@ WIDGET_DEFAULT = {
         "highlight_color": "#FFFFFF",
         "bkg_color": "#222222",
         "show_tyre_load_ratio": True,
+        "show_caption": False,
+        "font_scale_caption": 0.8,
+        "caption_text": "tyre load",
+        "font_color_caption": "#CCCCCC",
+        "bkg_color_caption": "#777777",
     },
     "tyre_pressure": {
         "enable": True,
